theme/default/main/css/main.css
/* Global Tags */

body {
    margin: 0px;
    width: 100%;
    font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 11px;
}

img{
    border: 0px;
}

h1 {
	font-size: 11px;
	vertical-align: middle;
	text-align: left;
	margin-left: 50px;
	margin-top: 50px;
}

h2 {
	font-size: 11px;
	vertical-align: middle;
	text-align: left;
	margin-left: 50px;
	margin-top: 20px;
}

h3 {
	font-size: 11px;
	vertical-align: middle;
	text-align: left;
    margin-left: 10px;
}

meter{
    width: 75%;
}

/* Header */

#headerBar{
    width: 100%;
    height: 30px;
    background-image: url('../images/headerBg.png');
    background-repeat: repeat-x;
}

#leftRivet{
    float: left;
}

#headerTitle{
    text-align: center;
    display: inline;
    position: relative;
    top: 7px;
    color: #9D9D9D;
}

#rightRivet{
    float: right;
}

#headerBanner{
    width: 100%;
    background-image: url('../images/bannerBg.png');
    background-repeat: repeat-x;
}

#bannerRight{
    float: right;
}

#shortcuts{
    float: right;
    position: relative;
    top: 10px;
    padding-right: 20px;
}

#search{
    width: 170px;
    height: 20px;
    position: relative;
    top: 5px;
    float: right;
}


/* Search */

#searchLeft{
    float: left;
}

#searchCenter{
    display: inline;
    background-color: #7C7B7B;
    position: absolute;
    top: 0px;
    height: 20px;
    width: 83%;
}

#searchRight{
    float: right;
}

#txtQuery{
    height: 18px;
    background-color: #7C7B7B;
}


/* Sidebar */

.sidebarContainer{
    width: 100%;
    height: 110%;
    background-image: url('../images/headerBg.png');
    background-repeat: repeat-x;
    border-color: #B6B6B6;
    border-width: 1px;
    border-style: solid;
    display: inline-block;
    overflow: hidden;
}

#sidebarLeft{
    width: 20%;
    min-height: 70%;
    margin-left: 2%;
    margin-right: 2%;
    float: left;
    
}

#sidebarLeft #leftRivet{
    float: left;
}

#sidebarLeft #headerTitle{
    text-align: center;
    display: inline-block;
    position: relative;
    width: 100%;
    top: -23px;
    color: #9D9D9D;
}

#sidebarLeft #rightRivet{
    float: right;
}

#sidebarRight{
    width: 20%;
    min-height: 70%;
    margin-left: 2%;
    margin-right: 2%;
    display: inline-block;
    float: right;
}

#sidebarRight #leftRivet{
    float: left;
}

#sidebarRight #headerTitle{
    text-align: center;
    display: inline-block;
    position: relative;
    width: 100%;
    top: -23px;
    color: #9D9D9D;
}

#sidebarRight #rightRivet{
    float: right;
}


/* Content  */

#mainContainer{
    width: 80%;
    height: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 27px;
    border-color: #B6B6B6;
    border-width: 1px;
    border-style: solid;
}

#content{
    display: inline-block;
    width: 100%;
    margin-top: 2%;
}


/* Modules */

.modules{
    width: 51.5%;
    height: auto;
    display: inline-block;
    border-color: #B6B6B6;
    border-width: 1px;
    border-style: solid;
    margin-bottom: 10px;
    background-color: #FFFFFF;
    
}

.header{
    width: 100%;
}

.header{
    width: 100%;
    height: 30px;
    background-image: url('../images/headerBg.png');
    background-repeat: repeat-x;
}


.header #leftRivet{
    float: left;
}

.header #headerTitle{
    text-align: center;
    display: inline-block;
    position: relative;
    width: 100%;
    top: -23px;
    color: #9D9D9D;
}

.header #rightRivet{
    float: right;
}

.module{
    display: inline-block;
    width: 75px;
    min-height: 40px;
    text-align: center;
    padding: 10px;
}

.icon{
    max-width: 50px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.line{
    margin-left: 50px;
	margin-right: 50px;
	border-top-width: 1px;
	border-top-style: solid;
	border-top-color: #b6b6b6;
}

.row{
    display: inline-block;
    width: 100%;
}

.frmLabel{
    width: 30%;
    display: inline-block;
    margin: 0px;
}

.frmInput{
    width: 60%;
    display: inline-block;
    margin: 0px;
}

.success{
    background-color: #CEF6CE;
    border-color: #81F781;
    border-width: 1px;
    border-style: solid;
    text-align: center;
    padding: 5px;
    margin: 5px;
}

.error{
    background-color: #F5A9A9;
    border-color: #FF0000;
    border-width: 1px;
    border-style: solid;
    text-align: center;
    padding: 5px;
    margin: 5px;
}

/* Sidebar */

.rowStyle:nth-child(odd){
    background-color: #A6A6A6;
}

.rowStyle:nth-child(even){
    background-color: #B6B6B6;
}


.label{
    width: 50%;
    display: inline-block;
    margin: 0px;
}

.description{
    width: 45%;
    display: inline-block;
    margin: 0px;
}

/* Footer [Start] */

#footer{
    text-align: center;
}

